2007-05-28 Peter Brett <peter@peter-b.co.uk>

	* include/prototype.h, include/struct.h, src/a_basic.c,
	  src/o_complex_basic.c, src/o_embed.c, src/o_list.c,
	  src/s_basic.c, src/s_clib.c, src/s_hierarchy.c,
	  src/s_toplevel.c: Implement new component library system in
	  libgeda.

	  A new component library model is needed to allow gschem etc.  to
	  work well with part database systems.  This patch provides the
	  necessary infrastructure in libgeda, without the frontend Guile
	  commands required to make use of the new features.  In
	  particular, it abstracts the component library into the concepts
	  of "Component Sources" and "Symbols", and allows external
	  "Library Commands" to provide symbol data in addition to the
	  traditional directory libraries.

	  In order to allow the new system to work, there are major
	  changes in all code which manipulates COMPLEX objects; in
	  particular, the magic "EMBEDDED" string is now only used in the
	  on-disc representation.
	
	* include/prototype.h, src/a_basic.c, src/o_attrib.c,
	  src/o_picture.c, o_text_basic.c: Make libgeda parse schematics
	  from buffered data.

	  In order to support more complex methods of acquiring symbol
	  data, libgeda needs to be able to load schematics and symbols
	  directly from a memory buffer as well as from files.
	
	* include/prototype.h, include/struct.h, src/Makefile.am,
	  src/s_textbuffer.c: Add managed text buffers to libgeda.

	  In order to facilitate loading symbols & schematics from memory
	  without an extensive rewrite, this patch adds an API for reading
	  memory arrays a bit like a file.

          Using memory streams & fgets would be nicer, but unfortunately
	  memory streams are a GNU libc extension.

2007-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20070526 in prep for the next
	release.  Also changed shared library's version number to 29:0:0.

2007-05-13 Ales Hvezda   <ahvezda@geda.seul.org>
